<resources>
    <string name="app_name">Gamr</string>
    <string name="gamr_app_logo_a_stylized_video_game_controller">Gamr App Logo, A Stylized Video Game Controller</string>
    <string name="casual">Casual</string>
    <string name="filter_by_play_style">Filter By Play Style</string>
    <string name="competitive">Competitive</string>
    <string name="ranked">ranked</string>
    <string name="coop">Co-op</string>
    <string name="filter_by_genre">Filter By Genre</string>
    <string name="fps">FPS</string>
    <string name="racing">racing</string>
    <string name="moba">moba</string>
    <string name="fighting">fighting</string>
    <string-array name="playing_styles">
        <item>Competitive</item>
        <item>Non-competitive</item>
        <item>Casual</item>
    </string-array>
</resources>