<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/PlayStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_play_style"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/casualButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textOff="@string/casual"
        android:textOn="@string/casual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayStyleTitle" />

    <ToggleButton
        android:id="@+id/competitiveButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/competitive"
        android:textOn="@string/competitive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PlayStyleTitle" />

    <ToggleButton
        android:id="@+id/rankedButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textOff="@string/ranked"
        android:textOn="@string/ranked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casualButton" />

    <ToggleButton
        android:id="@+id/coopButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/coop"
        android:textOn="@string/coop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/competitiveButton" />

    <TextView
        android:id="@+id/genreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/filter_by_genre"
        android:textColor="@color/cardview_dark_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rankedButton" />

    <ToggleButton
        android:id="@+id/racingButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:textOff="@string/racing"
        android:textOn="@string/racing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTitle" />

    <ToggleButton
        android:id="@+id/fpsButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/fps"
        android:textOn="@string/fps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreTitle" />

    <ToggleButton
        android:id="@+id/mobaButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:textOff="@string/moba"
        android:textOn="@string/moba"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/racingButton" />

    <ToggleButton
        android:id="@+id/fightingButton"
        android:layout_width="185dp"
        android:layout_height="139dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:textOff="@string/fighting"
        android:textOn="@string/fighting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fpsButton" />

</androidx.constraintlayout.widget.ConstraintLayout>